@@ -1,7 +1,7 @@
 auth : DB2
 logging  : 1
 #Be aware of tempdir setting.If client_browser and server_apache on same machine, sharing tmp-dir , problems 'Permission denied' if server tries to write temp-file wich already exists as client-owned
-tempdir : /tmp/ledgersmb2
+tempdir : test
 
 # This is the logical CSS directory.  I.e. it is what comes before the 
 # ledgersmb.css in the url.  Example might be /my_css_dir/ or 
