@@ -5,6 +5,7 @@ Supported Presently
 Changelog for 1.3.45
 * Cleaned up sql files so App::LedgerSMB::Admin (Chris T)
 * Fixed pricematrix prices not respected for vendors (Chris T, bug 1230)
+* Added tests for Sysconfig (Chris T, bug 1232)
 
 Chris T is Chris Travers
 
